# epyc-orchestrator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Justfile  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile
config/searxng/: settings.yml
data/package_b/: anomaly_report.json  slo_report.json  trimr_coder_results.jsonl  trimr_r1_7b_gpqa_trimr.jsonl  trimr_r1_7b_math_full.jsonl  trimr_r1_7b_math_think-strip.jsonl  trimr_r1_7b_math_trimr.jsonl  trimr_results.jsonl
data/package_c/: compaction_sweep.csv  compaction_sweep_L1.csv  compaction_sweep_L2.csv  compaction_sweep_L3.csv  compaction_sweep_L4.csv  compaction_sweep_L5.csv  summarizer_quality.csv  tale_budget.jsonl
docs/: ARCHITECTURE.md  SETUP.md  repl_pattern_analysis.md  token_audit_report.md
docs/chapters/: 01-runtime-environment.md  02-orchestration-architecture.md  03-repl-environment.md  04-production-server-stack.md  05-data-processing-pipelines.md  06-toon-encoding.md  07-memrl-system.md  08-graph-reasoning.md  09-memory-seeding.md  10-escalation-and-routing.md  11-procedure-registry.md  12-session-persistence.md  13-tool-registry.md  14-security-and-monitoring.md  15-skillbank-experience-distillation.md  16-calibration-and-risk-control.md  17-programmatic-tool-chaining.md  INDEX.md
docs/diagrams/: orchestration_topology.md
docs/guides/: getting-started.md  meta-harness-operator-guide.md  model-routing.md  system-prompt-guide.md
docs/reference/: OPEN_SOURCE_RECOMMENDATIONS.md  tool-chaining-patterns.md
orchestration/: BLOCKED_TASKS.md  PROGRESS_TEMPLATE.md  README.md  anomaly_signals.yaml  architecture_ir.schema.json  autopilot_baseline.yaml  classifier_config.yaml  debugger_protocol.yaml  deep_research_sentinel.yaml  eval_registry.yaml  factual_risk_calibration_v2_test.jsonl  factual_risk_calibration_v2_val.jsonl  formalization_ir.schema.json  generation_monitor.yaml  mcp_servers.yaml  model_quality_signatures.yaml  model_registry.yaml  model_registry_full.yaml  model_registry_lean.yaml  optimization_checkpoint.yaml  optimization_report.md  optuna_study.db  orchestrator_baseline.json  persona_registry.yaml  procedure.schema.json  procedure_registry.py  procedure_scheduler.py  source_registry.yaml  task_ir.schema.json  tool_registry.schema.json  tool_registry.yaml  validate_ir.py
orchestration/examples/: task_ir_example.json
orchestration/grading_specs/: answer_quality.yaml  routing_optimality.yaml  synthesis_coherence.yaml
orchestration/procedures/: add_model_quirks.yaml  add_model_to_registry.yaml  benchmark_new_model.yaml  check_draft_compatibility.yaml  create_handoff.yaml  deprecate_model.yaml  evaluate_finetuned_model.yaml  prepare_finetuning_dataset.yaml  run_finetuning.yaml  run_quality_gates.yaml  update_registry_performance.yaml
orchestration/progress/: PROGRESS_2025-12-16.md  PROGRESS_2025-12-21.md  PROGRESS_2025-12-22.md  PROGRESS_2026-01-04.md  PROGRESS_2026-01-07.md  PROGRESS_2026-01-08.md  PROGRESS_2026-01-27.md  PROGRESS_2026-02-01.md  PROGRESS_2026-02-10.md
orchestration/prompts/: architect_investigate.md  architect_synthesis.md  compaction_index.md  confidence_estimation.md  debugger_system.md  deep_search_agent.md  formalizer.md  frontdoor.md  meta_agent_reflect.md  plan_review.md  planning_agent.md  report_agent.md  review_verdict.md  revision.md  root_lm_system.md  rules.md  task_decomposition.md  tools.md
orchestration/repl_memory/: __init__.py  bilinear_scorer.py  embedder.py  episodic_store.py  failure_graph.py  faiss_store.py  graph_router_predictor.py  graph_router_weights.npz  graph_seeds.yaml  hypothesis_graph.py  lightweight_gat.py  parallel_embedder.py  progress_logger.py  q_scorer.py  retriever.py  routing_classifier.py  routing_graph.py  seed_examples.json  seed_loader.py  skill_bank.py  skill_evolution.py  skill_retriever.py  staged_scorer.py  strategy_store.py
orchestration/tools/: __init__.py  code.py  cpp_tools.py  data.py  executor.py  llm.py  math.py  system.py  task_management.py  web.py
orchestration/tools/cpp_src/: CMakeLists.txt  INTEGRATION.md
orchestration/tools/cpp_src/commands/numerical/: integrate.cpp
orchestration/tools/cpp_src/commands/statistical/: bayesopt.cpp  mcmc.cpp
orchestration/tools/cpp_src/commands/symbolic/: simplify.cpp  symbolic_diff.cpp
orchestration/tools/cpp_src/commands/visualization/: plot_sixel.cpp  render_math.cpp
orchestration/tools/cpp_src/include/: command.hpp  expression.hpp
scripts/: build_factual_risk_calibration_v2.py
scripts/analysis/: analyze_logit_probe.py  check_orchestrator_slice_coverage.py  compression_stats.py  dar1_regret_analysis.py  difficulty_signal_validation.py  mine_repl_patterns.py  searxng_health_report.py  token_audit.py
scripts/autopilot/: autopilot.py  autopilot_tui.py  config_applicator.py  eval_tower.py  experiment_journal.py  failure_blacklist.yaml  kv_compress.py  meta_optimizer.py  pareto_archive.py  preflight_audit.py  program.md  progress_plots.py  safety_gate.py  self_criticism.py  sentinel_questions.yaml  short_term_memory.md  short_term_memory.py  telemetry.py  worktree_manager.py
scripts/benchmark/: analyze_routing_policy.py  analyze_skill_transfer.py  context_generator.py  (+30 more)
src/: README.md  __init__.py  api.py  builtin_tools.py  canvas_export.py  canvas_import.py  cli.py  cli_orch.py  cli_sessions.py  concurrency.py  config.py  constants.py  context_compression.py  context_manager.py  delegation_cache.py  delegation_reports.py  dispatcher.py  env_parsing.py  escalation.py  exceptions.py  executor.py  failure_router.py  features.py  formalizer.py  gate_runner.py  generation_monitor.py  gradio_ui.py  inference_lock.py  inference_tap.py  llm_cache.py  llm_primitives.py  mcp_client.py  mcp_server.py  model_server.py  observability.py  parallel_step_executor.py  parsing_config.py  persona_loader.py  prefix_cache.py  proactive_delegation.py  (+19 more)
stack_templates/: default.yaml
tests/: conftest.py  test_canvas_export.py  test_canvas_import.py  test_dspy_signatures.py  test_gepa_integration.py  test_parallel_embedder.py  test_tool_loader.py
(+652 files in other folders)
