[project]
name = "hierarchical-orchestrator"
version = "0.1.0"
description = "Hierarchical local-agent orchestration for CPU inference"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",

    # Configuration
    "pyyaml>=6.0",
    "jsonschema>=4.20",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",

    # Optimization
    "optuna>=3.5.0",
    "optuna-dashboard>=0.15.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",

    # Utilities
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[project.scripts]
validate-ir = "orchestration.validate_ir:main"
registry-loader = "src.registry_loader:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
timeout = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
