[project]
name = "hierarchical-orchestrator"
version = "0.1.0"
description = "Hierarchical local-agent orchestration for CPU inference"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",  # Connection pooling for latency reduction
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",  # Type-safe configuration from env vars
    "sse-starlette>=2.0.0",  # Proper SSE streaming

    # Security
    "RestrictedPython>=7.0",  # Battle-tested Python sandboxing

    # Parsing
    "markdown-it-py>=3.0.0",  # Proper markdown parsing for code extraction

    # Configuration
    "pyyaml>=6.0",
    "jsonschema>=4.20",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "psutil>=5.9.0",  # Memory monitoring for test safety

    # Optimization
    "optuna>=3.5.0",
    "optuna-dashboard>=0.15.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",

    # Vector search (MemRL episodic memory)
    "faiss-cpu>=1.7.4",

    # Graph database (MemRL failure/hypothesis graphs)
    "kuzu>=0.8",

    # Caching (TTL cache for graph penalty lookups)
    "cachetools>=5.3",

    # Utilities
    "requests>=2.31.0",
    "rich>=13.7.0",

    # Web UI
    "gradio>=4.44.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]
toon = [
    # Token-Oriented Object Notation - 55% token reduction on structured data
    # Install from git until official PyPI release
    "toon-format @ git+https://github.com/toon-format/toon-python.git",
]

[project.scripts]
orch = "src.cli_orch:main"
orch-sessions = "src.cli_sessions:main"
validate-ir = "orchestration.validate_ir:main"
registry-loader = "src.registry_loader:main"
orchestrator-ui = "src.gradio_ui:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
timeout = 120
# WARNING: Do NOT use pytest-xdist with -n auto on this 192-thread machine!
# Each worker initializes the API which may load models, causing memory exhaustion.
# If using pytest-xdist, limit to: pytest -n 4
# See tests/conftest.py for memory safety guards.

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  # For toon-format git install

[tool.hatch.build.targets.wheel]
packages = ["src", "orchestration"]

[tool.uv]
# Ensure dependencies are always synced before running
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]
