[project]
name = "hierarchical-orchestrator"
version = "0.1.0"
description = "Hierarchical local-agent orchestration for CPU inference"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",  # Connection pooling for latency reduction
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",  # Type-safe configuration from env vars
    "sse-starlette>=2.0.0",  # Proper SSE streaming

    # Parsing
    "markdown-it-py>=3.0.0",  # Proper markdown parsing for code extraction

    # Configuration
    "pyyaml>=6.0",
    "jsonschema>=4.20",

    # ML / Numerical
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",

    # Vector search (MemRL episodic memory)
    "faiss-cpu>=1.7.4",

    # Vision pipeline (src/vision/, image handling)
    "Pillow>=10.0.0",

    # MCP server (src/mcp_server.py)
    "mcp>=1.0.0",

    # Orchestration graph (escalation flow)
    "pydantic-graph>=0.1.0",

    # Utilities
    "psutil>=5.9.0",  # Memory monitoring
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.0.0",
    "pandas>=2.0.0",  # Required for canvas export tests
]
toon = [
    # Token-Oriented Object Notation - 55% token reduction on structured data
    # Install from git until official PyPI release
    "toon-format @ git+https://github.com/toon-format/toon-python.git",
]
datasets = [
    # HuggingFace datasets for on-the-fly benchmark sampling
    "datasets>=2.14.0",
]
graph = [
    # Graph database for MemRL failure/hypothesis graphs
    "kuzu>=0.8",
    "cachetools>=5.3",  # TTL cache for graph penalty lookups
]
sandbox = [
    # Python sandboxing for REPL code execution (not yet in use)
    "RestrictedPython>=7.0",
]
knowledge = [
    # Knowledge retrieval tools (src/tools/knowledge.py)
    "arxiv>=2.0.0",
    "mwclient>=0.10.0",
    "semanticscholar>=0.11.0",
    "google-api-python-client>=2.100.0",
]
tuning = [
    # Hyperparameter optimization (Phase 7, not yet in use)
    "optuna>=3.5.0",
    "optuna-dashboard>=0.15.0",
]
ui = [
    # Web UI (not yet in use)
    "gradio>=4.44.0",
]

[project.scripts]
orch = "src.cli_orch:main"
orch-sessions = "src.cli_sessions:main"
validate-ir = "orchestration.validate_ir:main"
registry-loader = "src.registry_loader:main"
orchestrator-ui = "src.gradio_ui:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (intentional delayed imports)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n 8"
asyncio_mode = "auto"
timeout = 120
# WARNING: Do NOT use pytest-xdist with -n auto on this 192-thread machine!
# Each worker initializes the API which may load models, causing memory exhaustion.
# -n 8 gives 4x speedup (67s → 17s). Safe limit tested: -n 8.
# See tests/conftest.py for memory safety guards.

[tool.coverage.run]
source = ["src"]
omit = [
    "src/gradio_ui.py",        # UI module, not testable in CI
    "src/cli_*.py",            # CLI entrypoints
    "src/vision/*",            # Requires model files
    "src/__pycache__/*",
]

[tool.coverage.report]
fail_under = 30
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  # For toon-format git install

[tool.hatch.build.targets.wheel]
packages = ["src", "orchestration"]

[tool.uv]
# Ensure dependencies are always synced before running
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.0.0",
]
